Implementación del error de captcha

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://www.piscinasmp.com">
   <meta name="keywords" content="Construccion de piscinas, piscinas mp, piscinas Mundoline, piscinas en sanlucar, contacto piscinas, contacto mundoline, piscinas de acero, piscinas de hormigón, piscinas de madera, piscinas baratas de hormigón, piscinas baratas de acero, piscinas baratas de madera, construcción de piscinas en Sanlúcar de Barrameda">
   <meta name="description" content="Para que te pongas en contacto con nosotros tenemos este formulario para que nos llegue toda la información necesaria para aclarar tus dudas.">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="iconosvg.svg">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,600" rel="stylesheet">
